some changes to tile printing in minimap view